force-app/main/default/objects/CRMG_WF__Workflow__c/CRMG_WF__Workflow__c.object-meta.xml
<CustomObject>
    <label>Workflow</label>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>