force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Description__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>