force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
                <default>true</default>
                <label>created</label>
            </value>
            <value>
                <fullName>created, and every time it’s edited</fullName>
            </value>
            <value>
                <fullName>created, and any time it’s edited to subsequently meet criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>