force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>