force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__isActive__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>