force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Object__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>