force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Object_Formula__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Object_Formula__c</fullName>
    <formula>IF( OR(ISBLANK(CRMG_WF__Object_Label__c), ISNULL(CRMG_WF__Object_Label__c)), CRMG_WF__Object__c, CRMG_WF__Object_Label__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object</label>
    <type>Text</type>
</CustomField>