force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Rule_Criteria_Labled__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Rule_Criteria_Labled__c</fullName>
    <label>Rule Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>