force-app/main/default/objects/CRMG_WF__Workflow__c/fields/CRMG_WF__Workflow_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Workflow_Action_Type__c</fullName>
    <label>Workflow Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Email Alert</fullName>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>