force-app/main/default/objects/CRMG_WF__Workflow__c/listViews/CRMG_WF__Active_Email_Alerts.listView-meta.xml
<ListView>
    <fullName>CRMG_WF__Active_Email_Alerts</fullName>
    <columns>NAME</columns>
    <columns>CRMG_WF__Object_Formula__c</columns>
    <columns>CRMG_WF__Evaluation_Criteria__c</columns>
    <columns>CRMG_WF__Description__c</columns>
    <columns>CRMG_WF__Rule_Criteria_Query__c</columns>
    <columns>CRMG_WF__Filter_Logic__c</columns>
    <columns>CRMG_WF__isActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRMG_WF__Workflow_Action_Type__c</field>
        <operation>includes</operation>
        <value>Email Alert</value>
    </filters>
    <filters>
        <field>CRMG_WF__isActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>3. All Active Email Alerts</label>
</ListView>