force-app/main/default/objects/CRMG_WF__Workflow__c/listViews/CRMG_WF__All_Workflows.listView-meta.xml
<ListView>
    <fullName>CRMG_WF__All_Workflows</fullName>
    <columns>NAME</columns>
    <columns>CRMG_WF__Workflow_Action_Type__c</columns>
    <columns>CRMG_WF__Evaluation_Criteria__c</columns>
    <columns>CRMG_WF__Rule_Criteria_Query__c</columns>
    <columns>CRMG_WF__Rule_Criteria_Labled__c</columns>
    <columns>CRMG_WF__Object_Formula__c</columns>
    <columns>CRMG_WF__Description__c</columns>
    <columns>CRMG_WF__isActive__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Workflows</label>
</ListView>