force-app/main/default/objects/CRMG_WF__Workflow__c/listViews/CRMG_WF__Today_Workflows.listView-meta.xml
<ListView>
    <fullName>CRMG_WF__Today_Workflows</fullName>
    <columns>NAME</columns>
    <columns>CRMG_WF__isActive__c</columns>
    <columns>CRMG_WF__Workflow_Action_Type__c</columns>
    <columns>CRMG_WF__Evaluation_Criteria__c</columns>
    <columns>CRMG_WF__Rule_Criteria_Query__c</columns>
    <columns>CRMG_WF__Rule_Criteria_Labled__c</columns>
    <columns>CRMG_WF__Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>12/23/2014 12:00 AM</value>
    </filters>
    <label>Today Workflows</label>
</ListView>